// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core / Story host styles With Knobs 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c20=""
    _nghost-a-c21=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c21=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Core / Story host styles With story template 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c18=""
    _nghost-a-c19=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c19=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
